--- a/index.html
+++ b/index.html
@@ -37,10 +37,13 @@
   <button id="show_sketch" class="btn btn-info" data-toggle='modal' data-target="#myModal">Show Sketch</button>
 </h1>
 <p id="label">Label : </p>
-<p id="cofidnece">Confidence : </p>
-<p id="topic">Topic : </p>
+<p id="confidence">Confidence : </p>
+<p id="sketch_name">Sketch To be Drawn: </p>
 <button class="btn btn-danger btn-lg" onclick="clearCanvas()">Clear Canvas</button>
 </center>
+
+<p id= "score">Score : </p>
+<p id="time"> Time : </p>
 
 <script src="main.js"></script>
     </body>
